[gd_scene load_steps=2 format=2]

[ext_resource path="res://dzej/scripts/engine/settingsmenu.gd" type="Script" id=1]

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 50.0
margin_right = -200.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="SettingsDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 624.0
margin_bottom = 500.0
window_title = "Settings"

[node name="EntireContents" type="VBoxContainer" parent="SettingsDialog"]
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.97

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsDialog/EntireContents"]
margin_right = 599.0
margin_bottom = 433.0
size_flags_vertical = 3

[node name="Mouse" type="Label" parent="SettingsDialog/EntireContents/SettingsContainer"]
margin_right = 599.0
margin_bottom = 21.0
text = "Mouse sensitivity:"

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsDialog/EntireContents/SettingsContainer"]
margin_top = 25.0
margin_right = 599.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 30 )

[node name="MouseSens" type="HSlider" parent="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer2"]
margin_right = 545.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.05
max_value = 2.0
step = 0.05
value = 1.0
tick_count = 6
ticks_on_borders = true

[node name="LineEdit" type="LineEdit" parent="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer2"]
margin_left = 549.0
margin_right = 599.0
margin_bottom = 30.0
placeholder_text = "1"
placeholder_alpha = 0.8

[node name="VideoSettings" type="Label" parent="SettingsDialog/EntireContents/SettingsContainer"]
margin_top = 59.0
margin_right = 599.0
margin_bottom = 104.0
text = "
Video Settings:"

[node name="HSeparator" type="HSeparator" parent="SettingsDialog/EntireContents/SettingsContainer"]
visible = false
margin_top = 70.0
margin_right = 599.0
margin_bottom = 74.0

[node name="Fxaa" type="CheckButton" parent="SettingsDialog/EntireContents/SettingsContainer"]
visible = false
margin_top = 64.0
margin_right = 104.0
margin_bottom = 100.0
size_flags_horizontal = 0
text = "Fxaa:"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsDialog/EntireContents/SettingsContainer"]
margin_top = 108.0
margin_right = 599.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 26.0
text = "Fxaa: "

[node name="OptionButton" type="OptionButton" parent="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 85.0
margin_bottom = 31.0
text = "On"
items = [ "On", null, false, 0, null, "Off", null, false, 1, null ]
selected = 0

[node name="ConfirmationContainer" type="HBoxContainer" parent="SettingsDialog/EntireContents"]
margin_left = 467.0
margin_top = 437.0
margin_right = 599.0
margin_bottom = 470.0
size_flags_horizontal = 8
alignment = 1

[node name="Cancel" type="Button" parent="SettingsDialog/EntireContents/ConfirmationContainer"]
margin_right = 55.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Apply" type="Button" parent="SettingsDialog/EntireContents/ConfirmationContainer"]
margin_left = 59.0
margin_right = 104.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Apply"

[node name="Ok" type="Button" parent="SettingsDialog/EntireContents/ConfirmationContainer"]
margin_left = 108.0
margin_right = 132.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Ok"

[connection signal="about_to_show" from="SettingsDialog" to="." method="_on_SettingsDialog_about_to_show"]
[connection signal="value_changed" from="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer2/MouseSens" to="." method="_on_MouseSens_value_changed"]
[connection signal="text_entered" from="SettingsDialog/EntireContents/SettingsContainer/HBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="SettingsDialog/EntireContents/ConfirmationContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="SettingsDialog/EntireContents/ConfirmationContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="SettingsDialog/EntireContents/ConfirmationContainer/Ok" to="." method="_on_Ok_pressed"]
